# VIT_Redundancy

./: .gitignore  Block0.ipynb  Exploring Patch Embed.ipynb  Improving Calculations.ipynb  Main.ipynb  Untitled.ipynb  execution_order.json  readme.md  script.py
multiplier/: Cargo.toml
multiplier/src/: database.rs  lib.rs  logger.rs  utils.rs
results/: version3.csv
