[package]
name = "multiplier"
version = "0.1.0"
edition = "2024"

[lib]
name = "multiplier"
crate-type = ["cdylib"] 

[dependencies]
num-traits = "0.2.19"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
postgres = "0.19.10"
once_cell = "1.19"
crossbeam = "0.8.4"
rust_decimal = { version = "1.37.1", features = ["db-postgres"] }
bytes = "1.10.1"
rayon = "1.10.0"

