[package]
name = "multiplier"
version = "0.1.0"
edition = "2024"

[lib]
name = "multiplier"
crate-type = ["cdylib"] 

[dependencies]
num-traits = "0.2.19"
pyo3 = { version = "0.25.0", features = ["extension-module"] }
once_cell = "1.19"
crossbeam = "0.8.4"
mysql = "24"
rust_decimal = { version = "1.37", features = ["db-diesel-mysql"] }
rayon = "1.10.0"
dotenv = "0.15.0"